force-app/main/default/objects/Proposal_Role__c/fields/What_best_describes_you__c.field-meta.xml
<CustomField>
    <fullName>What_best_describes_you__c</fullName>
    <description>Used by WFD</description>
    <inlineHelpText>NYS = New York State.

For the definition of Priority Population and Disadvantaged Communities, including an interactive map of Disadvantaged Communities, see the &quot;Definitions&quot; page of the NYSERDA Workforce Development website: https://www.nyserda.ny.gov/All-Programs/Programs/Clean-Energy-Workforce-Development/Definitions</inlineHelpText>
    <label>What best describes you</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current student at a college or university in NYS</fullName>
            </value>
            <value>
                <fullName>Current student at a college or university outside of NYS</fullName>
            </value>
            <value>
                <fullName>Graduate from a college or university in NYS (within the last 12 months)</fullName>
            </value>
            <value>
                <fullName>Graduate from a college or university outside NYS (within the last 12 months)</fullName>
            </value>
            <value>
                <fullName>Other - Priority Population / Disadvantaged Community Member</fullName>
            </value>
            <value>
                <fullName>Current student at a college or university outside of NY</fullName>
                <isActive>false</isActive>
                <label>Current student at a college or university outside of NY</label>
            </value>
            <value>
                <fullName>I am 16-24 years old and enrolled in or completed (within the past 12 months) a comprehensive energy-related work preparedness training program</fullName>
                <isActive>false</isActive>
                <label>I am 16-24 years old and enrolled in or completed (within the past 12 months) a comprehensive energy-related work preparedness training program</label>
            </value>
            <value>
                <fullName>I am a military veteran.</fullName>
                <isActive>false</isActive>
                <label>I am a military veteran.</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>