force-app/main/default/objects/Proposal_Role__c/fields/What_best_describes_you_Other__c.field-meta.xml
<CustomField>
    <fullName>What_best_describes_you_Other__c</fullName>
    <description>Added for SF-33555</description>
    <label>What best describes you - Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident of Disadvantaged Community</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Individual with disability</fullName>
            </value>
            <value>
                <fullName>Low-income individual</fullName>
            </value>
            <value>
                <fullName>Incumbent or unemployed power plant worker</fullName>
            </value>
            <value>
                <fullName>Previously incarcerated</fullName>
            </value>
            <value>
                <fullName>Student in qualifying work preparedness program</fullName>
            </value>
            <value>
                <fullName>Homeless individual</fullName>
            </value>
            <value>
                <fullName>Single parent</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
                <isActive>false</isActive>
                <label>Native American</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>