force-app/main/default/objects/Proposal_Role__c/fields/What_will_you_learn__c.field-meta.xml
<CustomField>
    <fullName>What_will_you_learn__c</fullName>
    <description>Used in WFD Intern Application</description>
    <inlineHelpText>What are you hoping to learn or gain from a clean energy internship? Please check all that apply.</inlineHelpText>
    <label>What will you learn?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic learning</fullName>
            </value>
            <value>
                <fullName>Career development (i.e. information about the clean energy field and career paths, networking)</fullName>
            </value>
            <value>
                <fullName>Personal development and growth (i.e. &apos;soft skills&apos; like speaking in front of groups)</fullName>
            </value>
            <value>
                <fullName>Skill development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>&lt;br&gt;            Career development (i.e. information about the clean energy field and career paths, networking)</fullName>
                <isActive>false</isActive>
                <label>&lt;br&gt;            Career development (i.e. information about the clean energy field and career paths, networking)</label>
            </value>
            <value>
                <fullName>Academic learning Career development (i.e. information about the clean energy field and career paths, networking)</fullName>
                <isActive>false</isActive>
                <label>Academic learning Career development (i.e. information about the clean energy field and career paths, networking)</label>
            </value>
            <value>
                <fullName>Academic learning Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. &apos;&apos;soft skills&apos;&apos; like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Academic learning Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. &apos;&apos;soft skills&apos;&apos; like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Academic learning Personal development and growth (i.e. &apos;&apos;soft skills&apos;&apos; like speaking in front of groups) Skill development</fullName>
                <isActive>false</isActive>
                <label>Academic learning Personal development and growth (i.e. &apos;&apos;soft skills&apos;&apos; like speaking in front of groups) Skill development</label>
            </value>
            <value>
                <fullName>Academic learning Personal development and growth (i.e. &apos;soft skills&apos; like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Academic learning Personal development and growth (i.e. &apos;soft skills&apos; like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Academic learning Personal development and growth (i.e. soft skills like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Academic learning Personal development and growth (i.e. soft skills like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Academic learning Personal development and growth (i.e. soft skills like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Academic learning Personal development and growth (i.e. soft skills like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Academic learning Skill development</fullName>
                <isActive>false</isActive>
                <label>Academic learning Skill development</label>
            </value>
            <value>
                <fullName>Academic learning,Career development (i.e. information about the clean energy field and career paths, networking)</fullName>
                <isActive>false</isActive>
                <label>Academic learning,Career development (i.e. information about the clean energy field and career paths, networking)</label>
            </value>
            <value>
                <fullName>Career development (i e  information about the clean energy field and career paths, networking)</fullName>
                <isActive>false</isActive>
                <label>Career development (i e  information about the clean energy field and career paths, networking)</label>
            </value>
            <value>
                <fullName>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. â€œsoft skillsâ€ like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. â€œsoft skillsâ€ like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. â€œsoft skillsâ€ like speaking in front of groups) Other</fullName>
                <isActive>false</isActive>
                <label>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. â€œsoft skillsâ€ like speaking in front of groups) Other</label>
            </value>
            <value>
                <fullName>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. “soft skills” like speaking in front of groups) Skill development</fullName>
                <isActive>false</isActive>
                <label>Career development (i.e. information about the clean energy field and career paths, networking) Personal development and growth (i.e. “soft skills” like speaking in front of groups) Skill development</label>
            </value>
            <value>
                <fullName>Personal development and growth (i e  soft skills like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Personal development and growth (i e  soft skills like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Personal development and growth (i.e. soft skills like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Personal development and growth (i.e. soft skills like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Personal development and growth (i.e. soft skills like speaking in front of groups)</fullName>
                <isActive>false</isActive>
                <label>Personal development and growth (i.e. soft skills like speaking in front of groups)</label>
            </value>
            <value>
                <fullName>Personal development and growth (i.e. soft skills like speaking in front of groups) Other</fullName>
                <isActive>false</isActive>
                <label>Personal development and growth (i.e. soft skills like speaking in front of groups) Other</label>
            </value>
            <value>
                <fullName>Skill development Other</fullName>
                <isActive>false</isActive>
                <label>Skill development Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>