force-app/main/default/objects/Proposal_Role__c/fields/ZZ_Account_lookup_in_sync_Contact__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Account_lookup_in_sync_Contact__c</fullName>
    <description>T-02464 - Ajay Gautam - Temporary field for critical data fix in prod</description>
    <formula>ZZ_AccountId_fromContact__c  = Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account lookup in sync? (Contact)</label>
    <type>Checkbox</type>
</CustomField>