force-app/main/default/objects/Proposal_Role__c/fields/ZZ_AccountId_from_Account__c.field-meta.xml
<CustomField>
    <fullName>ZZ_AccountId_from_Account__c</fullName>
    <description>T-02464 - Ajay Gautam - Temporary field for critical data fix in prod</description>
    <formula>Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId from Account</label>
    <type>Text</type>
</CustomField>