force-app/main/default/objects/Proposal_Role__c/fields/ZZ_AccountId_fromContact__c.field-meta.xml
<CustomField>
    <fullName>ZZ_AccountId_fromContact__c</fullName>
    <description>T-02464 - Ajay Gautam - Temporary field for critical data fix in prod</description>
    <formula>Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId from Contact</label>
    <type>Text</type>
</CustomField>